--- a/CGProject2/CGProject2.vcxproj
+++ b/CGProject2/CGProject2.vcxproj
@@ -134,6 +134,10 @@
     <None Include="fragment.glsl" />
     <None Include="vertex.glsl" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Filetobuf.h" />
+    <ClInclude Include="Shader.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
